# slopwatch

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs  scorer.rs
src/parser/: mod.rs  npm.rs  pypi.rs
src/registry/: mod.rs  npm.rs  pypi.rs
src/report/: json.rs  mod.rs  sarif.rs  terminal.rs
