[package]
name = "slopwatch"
version = "0.1.0"
edition = "2021"
description = "Detect slopsquatting attacks — AI-hallucinated packages registered by attackers"
license = "MIT"
repository = "https://github.com/loicguillois/slopwatch"
homepage = "https://github.com/loicguillois/slopwatch"
keywords = ["security", "supply-chain", "slopsquatting", "ai", "dependencies"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
toml = "0.8"
